
  * bin/reportbug
    - don't try to map package to source when using --from-buildd, and also
      force version set; thanks to Cyril Brulebois for reporting this (on IRC)
      and testing preliminary patches
    - correctly pass the 'timeout' parameter to 'check_built'; thanks to Daniel
      Bolton for the report and to Milan Vancura for the patch; Closes: #580382

 -- Sandro Tosi <morph@debian.org>  Mon, 10 May 2010 22:34:14 +0200

reportbug (4.12.1) unstable; urgency=low

  * reportbug/utils.py
    - only take file name and md5sum from Conffile from dpkg --status; thanks to
      all the reporters; Closes: #577986
  * reportbug/ui/text_ui.py
    - pass 'timeout' to search_bug, needed when filtering bugs; thanks to Matt
      Kraai for the report and patch; Closes: #578505

 -- Sandro Tosi <morph@debian.org>  Thu, 22 Apr 2010 21:59:02 +0200

reportbug (4.12) unstable; urgency=low

  * reportbug/debianbts.py
    - fix description for 'experimental' tag; thanks to Raphael Rigo for the
      report; Closes: #575044
    - check the available packages (not only the installed ones) when reporting
      a wnpp bug; thanks to Filippo Giunchedi for the report; Closes: #565435
  * bin/reportbug
    - removed the information that an empty subject would stop the report: it
      will continue until entered or Ctrl+c; thanks Torquil Macdonald Sørensen
      for the report; Closes: #575450
    - keep presenting the severity menu until one is selected (prevent a crash
      with urwid UI and Cancel button); thanks to Noah Slater for the report;
      Closes: #461908
    - treat every FTBFS bug (pseudo-severity 'does-not-build') as 'serious' but
      adding a note in the Justification pseudo-header if the package was built
      successfully in the past; thanks to Alexander Schmehl for the report;
      Closes: #390466
    - in case of a bug for an undisclosed vulnerability (tagged 'security'),
      report it to the private Security Team mailing list instead of to the