@@ -6,8 +6,12 @@ reportbug (4.12.2) UNRELEASED; urgency=low
       and testing preliminary patches
     - correctly pass the 'timeout' parameter to 'check_built'; thanks to Daniel
       Bolton for the report and to Milan Vancura for the patch; Closes: #580382
+  * reportbug/utils.py
+    - generate a list of pseudoheaders (without duplicates), so that when
+      writing them into the report body they are not repeated; thanks to Cyril
+      Brulebois for the report; Closes: #579597
 
- -- Sandro Tosi <morph@debian.org>  Mon, 10 May 2010 22:34:14 +0200
+ -- Sandro Tosi <morph@debian.org>  Tue, 11 May 2010 19:23:40 +0200
 
 reportbug (4.12.1) unstable; urgency=low
 
